scripts/scenario-5/resilience/books.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-track-istio 
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  namespace: fast-track-istio 
  labels:
    app: books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: books
          image: fasttrackistio/books:1.0.0
          resources:
            limits:
              cpu: "1"
              memory: 100Mi
            requests:
              cpu: "0.5"
          ports:
            - name: http-books-api
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: books-api-service
  namespace: fast-track-istio 
  labels:
    app: books
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: http-books-api
  selector:
    app: books
