scripts/scenario-5/resilience/books-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: books-api-gateway
  namespace: fast-track-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-books-api-gateway
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-api-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - "*"
  gateways:
    - books-api-gateway
  http:
    - route:
        - destination:
            host: books-api-service
            port:
              number: 4000
